Fix sidebar position on mobile responsive with only one kSuite
Changelog: fixed

--- a/sass/base/_structure.scss
+++ b/sass/base/_structure.scss
@@ -166,7 +166,11 @@ body.app__body #root {
             }
             #SidebarContainer.move--right {
                 position: relative;
-                left: 65px;
+            }
+            .multi-teams {
+                #SidebarContainer.move--right {
+                    left: 65px;
+                }
             }
         }
     }
